<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multi Mobile GPA</string>
    
    <string name="lblExit">Sair</string>
    <string name="lblLogout">Deslogar</string>
    <string name="lblAtualizarDados">Atualizar Dados</string>
    <string name="lblLinkVideo">Vídeo</string>
    <string name="lblSettings">Configurações</string>    
    <string name="lblSobre">Sobre</string>
    
    <string name="title_activity_principal">Controle de Fila - GPA</string>
    <string name="title_activity_carga_fila">Qtd. Cargas Fila</string>
    <string name="title_activity_notificacao_online_fila">Notificações Online Fila</string>
    <string name="title_activity_dados_carga_online_fila">Dados Carga Online Fila</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_lista_ocorrencia_glog_online_fila">Ocorrências GLog</string>
    <string name="title_activity_ocorrencia_glog_fila">Ocorrência GLog</string>
    
    <string name="app_version">2.2</string>
    <string name="app_ambiente">Homologação</string><!--Produção, Homologação e 125-->
    <string name="dbVersion">3</string>
    <string name="url_ws">http://gpahomo.multiembarcador.com.br/sgt.mobile/</string>
    <!--http://192.168.0.125:84/-->
    <!--http://200.53.21.5:84/-->
    <!--http://gpahomo.multiembarcador.com.br/sgt.mobile/-->
    <!--http://gpa.multiembarcador.com.br/SGT.Mobile/-->
    
    <string name="chave_ws">token</string>
    <string name="time_reconnection_signalr">120000</string>

</resources>