<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.inf.commerce.commercemobile.PrincipalActivity" >

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/lblExit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/lblLogout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_atualizar_dados"
        android:orderInCategory="100"
        android:title="@string/lblAtualizarDados"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_link_video"
        android:orderInCategory="100"
        android:title="@string/lblLinkVideo"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/lblSettings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/lblSobre"
        app:showAsAction="ifRoom"/>

</menu>